--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
 <head>
-<meta charset="UTF-8">
-<title> kikiki156 page</title>
+  <meta charset="UTF-8">
+  <title> kikiki156 page</title>
 </head>
 <body>
-
-<p>앞으로 내용 추가하겠습니다</p>
+  <p>kikiki156 page 입니다</p>
+  <p>앞으로 내용 추가하겠습니다</p>
 
 </body>
 </html>
